# 2048-c-

./: .gitignore  CMakeLists.txt  main.cpp
src/: Game.cpp  Game.hpp  main.cpp
